# Project Seoul Adaptive UI (SAUI).
# Seoul-owned declarative surface protocol: typed document model, trusted
# domain-neutral component catalog, structural parsing, semantic validation,
# incremental patches, typed events, presentation selection, and the adaptive
# interface compiler that turns generic semantic results into validated
# surfaces by shape-and-role reasoning. Pure model: //base, //url, the Seoul
# provenance layer, and the semantic fabric. No rendering here; the trusted
# renderer consumes validated surfaces.

import("//testing/test.gni")

source_set("saui_core") {
  sources = [
    "interface_compiler.cc",
    "interface_compiler.h",
    "saui_catalog.cc",
    "saui_catalog.h",
    "saui_document.cc",
    "saui_document.h",
    "saui_errors.h",
    "saui_events.cc",
    "saui_events.h",
    "saui_limits.h",
    "saui_patch.cc",
    "saui_patch.h",
    "saui_selection.cc",
    "saui_selection.h",
    "saui_types.cc",
    "saui_types.h",
    "saui_validator.cc",
    "saui_validator.h",
    "semantic_to_saui.cc",
    "semantic_to_saui.h",
  ]

  deps = [
    "//base",
    "//seoul/browser/data:data_core",
    "//seoul/browser/semantic:semantic_core",
    "//url",
  ]
}

test("seoul_saui_unittests") {
  testonly = true
  sources = [
    "interface_compiler_unittest.cc",
    "saui_document_unittest.cc",
    "saui_patch_unittest.cc",
    "saui_protocol_fixtures_unittest.cc",
    "saui_selection_unittest.cc",
    "saui_validator_unittest.cc",
  ]
  deps = [
    ":saui_core",
    "//base",
    "//base/test:run_all_unittests",
    "//base/test:test_support",
    "//seoul/browser/data:data_core",
    "//seoul/browser/semantic:semantic_core",
    "//testing/gtest",
    "//url",
  ]

  # The cross-language conformance corpus, mirrored from the repository's
  # protocol/ directory by materialize.sh.
  data = [ "//seoul/protocol/" ]
}
