# Project Seoul Site Layers.
# Declarative per-site customization compiled to safe scoped CSS. No arbitrary
# JavaScript; selectors and values are validated against a safe subset. Pure
# model: //base plus Chromium's canonical URL parser.

import("//testing/test.gni")

source_set("site_layers_core") {
  sources = [
    "site_layer_compiler.cc",
    "site_layer_compiler.h",
    "site_layer_registry.cc",
    "site_layer_registry.h",
    "site_layer_types.cc",
    "site_layer_types.h",
  ]

  deps = [
    "//base",
    "//url",
  ]
}

test("seoul_site_layers_unittests") {
  testonly = true
  sources = [
    "site_layer_compiler_unittest.cc",
    "site_layer_registry_unittest.cc",
  ]
  deps = [
    ":site_layers_core",
    "//base",
    "//base/test:run_all_unittests",
    "//base/test:test_support",
    "//testing/gtest",
  ]
}
