# Project Seoul theme system.
# Theme token model, WCAG contrast validation, and JSON round-tripping. Pure
# model: //base only.

import("//testing/test.gni")

source_set("themes_core") {
  sources = [
    "theme_registry.cc",
    "theme_registry.h",
    "theme_types.cc",
    "theme_types.h",
    "theme_validation.cc",
    "theme_validation.h",
  ]

  deps = [ "//base" ]
}

test("seoul_themes_unittests") {
  testonly = true
  sources = [
    "theme_registry_unittest.cc",
    "theme_validation_unittest.cc",
  ]
  deps = [
    ":themes_core",
    "//base",
    "//base/test:run_all_unittests",
    "//base/test:test_support",
    "//testing/gtest",
  ]
}
