# Project Seoul general-purpose operator: tool layer.
# Typed capability identities, schemas, argument validation, the JSON Schema
# importer, and the Capability Graph registry with permission-scoped
# discovery, availability/health, and version negotiation. Pure model: //base
# and //url.

import("//testing/test.gni")

source_set("tools_core") {
  sources = [
    "tool_registry.cc",
    "tool_registry.h",
    "tool_schema.cc",
    "tool_schema.h",
    "tool_schema_from_json.cc",
    "tool_schema_from_json.h",
    "tool_types.h",
  ]

  deps = [
    "//base",
    "//url",
  ]
}

test("seoul_tools_unittests") {
  testonly = true
  sources = [ "tool_registry_unittest.cc" ]
  deps = [
    ":tools_core",
    "//base",
    "//base/test:test_support",
    "//testing/gtest",
    "//url",
  ]
}
