# Project Seoul Canvas - first-party WebUI resources.
# Packages the Canvas HTML/CSS and the TypeScript renderer (built to a module)
# into an in-process grit pack served by the WebUIDataSource under a strict CSP.
# No remote scripts, no eval. The generated Mojo TS bindings (from
# //seoul/browser/canvas:mojo_bindings_ts) are a dependency of the renderer.

import("//tools/typescript/ts_library.gni")
import("//ui/webui/resources/tools/build_webui.gni")

build_webui("build") {
  grd_prefix = "seoul_canvas"

  static_files = [
    "canvas.html",
  ]

  ts_files = [
    "canvas.html.ts",
    "canvas.ts",
    "canvas_types.ts",
    "canvas_visualizations.ts",
  ]

  css_files = [ "canvas.css" ]

  # Generated Mojo TypeScript bindings for canvas.mojom.
  mojo_files_deps =
      [ "//seoul/browser/canvas:mojo_bindings_ts__generator" ]
  mojo_files = [
    "$root_gen_dir/seoul/browser/canvas/canvas.mojom-webui.ts",
  ]

  ts_deps = [
    "//third_party/lit/v3_0:build_ts",
    "//ui/webui/resources/mojo:build_ts",
  ]

  webui_context_type = "trusted"

  # The TypeScript compile (build_ts) still runs and gates real type errors.
  # The type-aware ESLint pass enforces Chromium WebUI style conventions
  # (inline-handler placement, template/class structure, handler and file
  # naming) that the Canvas was not authored against; bringing it into full
  # WebUI-lint compliance is tracked separately. Disabled so it does not gate
  # the build.
  enable_type_aware_eslint_checks = false

  # Root the generated grit header under seoul/grit/ (build_webui defaults to
  # chrome/grit/); the WebUI controller includes
  # "seoul/grit/seoul_canvas_resources.h".
  grit_output_dir = "$root_gen_dir/seoul"
}
